# AutoRes

./: .env  .gitignore  README.md  ash_resume.yaml  pyproject.toml  resume.yaml
AutoRes/: pyproject.toml
AutoRes/src/AutoRes/: .env  main.py
AutoRes/src/AutoRes/res_score/: doctxt.py
AutoRes/src/AutoRes/resources/docs/: Maintenance Coordinator V3.6.docx
AutoRes/tests/: doctxt_tst.py  test.py  test2.py  test3.py
AutoRes/tests/res_score/: doctxt.py
AutoRes/tests/resources/docs/: Equipment_Planner_V3.6.docx
AutoRes/tests/resources/texts/: jd.txt  keywords.txt  peer_skills.txt  skills.txt  tailored_resume.txt
output/: Ash_Afshar_CV.aux  Ash_Afshar_CV.tex
src/AutoRes/resources/texts/: jd.txt
tests/: AutoRes.py  pdf_test.py
tests/resources/Restexts/: Equipment_Planner_V3.6.txt  Maintenance Coordinator V3.6.txt
tests/resources/texts/: keywords.txt  peer_skills.txt  skills.txt  tailored_resume.txt
